OpenJMLTest/test/twoFilesC/expected
test/twoFilesC/A.java:3: error: cannot find symbol
public class A { B bb;  }
                 ^
  symbol:   class B
  location: class A
test/twoFilesC/q/B.jml:2: error: This JML field declaration conflicts with an existing field with the same name: B.k
public class B { /*@ model int k;*/ }
                               ^
test/twoFilesC/q/B.java:2: error: Associated declaration: test/twoFilesC/q/B.jml:2:
public class B { int k ;  }
                     ^
Operation not performed because of parse or type errors
3 errors
